...
        }
    }

    AlertDialog(
        onDismissRequest = onDismiss,
        modifier = Modifier.testTag("alertDialog"),
        confirmButton = {
            TextButton(onClick = onDone) {
                Text(
                    text = stringResource(id = R.string.btn_confirm),
                    modifier = Modifier.testTag("confirmButton"),
                    color = MaterialTheme.colors.secondary,
                    style = MaterialTheme.typography.button
...
                onValueChange = {
                    if (isValidNumber(it)) {
                        value = it
                    }
                },
                modifier = Modifier
                    .testTag("textField")
                    .fillMaxWidth(),
                textStyle = MaterialTheme.typography.body1.copy(textAlign = TextAlign.Center),
                placeholder = {
                    Text(
                        text = "0.00",
                        modifier = Modifier.fillMaxWidth(),
...
